--- a/public/home.html
+++ b/public/home.html
@@ -18,6 +18,7 @@
         <li class="p-4"><a href="" class="no-underline">Materials</a></li>
         <li class="p-4"><a href="" class="no-underline">Events</a></li>
         <li class="p-4"><a href="" class="no-underline">Contact</a></li>
+        <li class="p-4"><i class="fas fa-user hover:cursor-pointer"></i></li>
         <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
       </ul>
     </div>
