Added the About Me and Hobbies section

--- a/public/home.html
+++ b/public/home.html
@@ -24,11 +24,32 @@
     </div>
   </nav>
   <main class="max-w-7xl grid grid-cols-4 h-96 mt-20 mx-auto gap-5">
+
+    <!-- Name and profile picture section  -->
     <section id="user-picture" class="col-start-1 col-end-2 flex flex-col items-center">
       <img src="./images/Resume Photo.jpg" alt="image could not be loaded" class="rounded-full border-x border-white h-60 w-60 ">
-      <p class="font-bold text-3xl mt-5">Eshaan Bahuguna</p>
+      <h1 class="mt-5">Eshaan Bahuguna</h1>
     </section>
-    <section id="about-me" class="col-start-1 col-end-2 card"></section>
+    
+    <!-- Description and Hobbies section  -->
+    <div class="card col-start-1 col-end-2">
+      <section id="about-me" class= "divide-y-2 px-2">
+        <div>
+          <h3>About Me</h3>
+          <p class="mt-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, nulla sint facere vel laboriosam doloremque, architecto fugiat odio quibusdam laudantium ea amet, maiores voluptate voluptates assumenda obcaecati voluptatibus beatae natus!</p>
+        </div>
+        <div class="mt-3">
+          <h3 class="mt-3">Hobbies</h3>
+          <ul class="mt-2 grid grid-cols-2 text-center">
+            <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Dancing</li>
+            <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Swimming</li>
+            <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Calisthenics</li>
+            <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Gaming</li>
+          </ul>
+        </div>
+      </section>
+    </div>
+
     <section id="make-post" class="col-start-2 col-end-4"></section>
     <section id="user-posts" class="col-start-2 col-end-4"></section>
     <section id="skills" class="col-start-4 col-end-5"></section>
