--- a/public/home.html
+++ b/public/home.html
@@ -7,8 +7,11 @@
   <title>Social Forum for VIT Bhopal</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/c50b62b617.js" crossorigin="anonymous"></script>
+</head>
+
 <body class="bg-slate-50 border-box">
-  <nav class="mx-auto max-w-5xl mt-5 card">
+  <!-- Navbar -->
+  <nav class="mx-auto max-w-5xl mt-7 card">
     <div class="flex flex-row justify-between">
       <div id="logo" class="pt-2">
         <h1 class="font-bold text-3xl">VIT Bhopal Social Forum</h1>
@@ -23,8 +26,8 @@
       </ul>
     </div>
   </nav>
-  <main class="max-w-7xl grid grid-cols-4 h-96 mt-20 mx-auto gap-5">
 
+  <main class="grid grid-cols-5 gap-5">
     <!-- Name and profile picture section  -->
     <section id="user-picture" class="col-start-1 col-end-2 flex flex-col items-center">
       <img src="./images/Resume Photo.jpg" alt="image could not be loaded" class="rounded-full border-x border-white h-60 w-60 ">
@@ -32,13 +35,14 @@
     </section>
     
     <!-- Description and Hobbies section  -->
-    <div class="card col-start-1 col-end-2">
-      <section id="about-me" class= "divide-y-2 px-2">
+    <section class="card col-start-1 col-end-2">
+      <div id="about-me" class= "divide-y-2 px-2">
         <div>
           <h3>About Me</h3>
           <p class="mt-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, nulla sint facere vel laboriosam doloremque, architecto fugiat odio quibusdam laudantium ea amet, maiores voluptate voluptates assumenda obcaecati voluptatibus beatae natus!</p>
         </div>
         <div class="mt-3">
+          <!-- Any 4 hobbies -->
           <h3 class="mt-3">Hobbies</h3>
           <ul class="mt-2 grid grid-cols-2 text-center">
             <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Dancing</li>
@@ -47,13 +51,72 @@
             <li class="p-2"><i class="fas fa-angle-right mr-1"></i>Gaming</li>
           </ul>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
     <section id="make-post" class="col-start-2 col-end-4"></section>
     <section id="user-posts" class="col-start-2 col-end-4"></section>
-    <section id="skills" class="col-start-4 col-end-5"></section>
-    <section id="events" class="col-start-4 col-end-5"></section>
+
+    <!-- Skills section -->
+    <!-- TOP 5 Skills -->
+    <section id="skills" class="col-start-5 col-end-6 card row-start-1">
+      <h3 class="mb-3 text-center">Skills</h3>
+      <div class="mb-3">
+      <p class="font-bold mb-2">HTML/CSS</p>
+        <div class="bg-slate-50 h-3 rounded">
+          <div style="width: 100%; height: 100%" class="bg-yellow-200 rounded"></div>
+        </div>
+      </div>
+      <div class="mb-3">
+      <p class="font-bold mb-2">JAVASCRIPT</p>
+        <div class="bg-slate-50 h-3 rounded">
+          <div style="width: 85%; height: 100%" class="bg-yellow-200 rounded"></div>
+        </div>
+      </div>
+      <div class="mb-3">
+      <p class="font-bold mb-2">MongoDB</p>
+        <div class="bg-slate-50 h-3 rounded">
+          <div style="width: 75%; height: 100%" class="bg-yellow-200 rounded"></div>
+        </div>
+      </div>
+      <div>
+      <p class="font-bold mb-2">Node.js + MONGOOSE</p>
+        <div class="bg-slate-50 h-3 rounded">
+          <div style="width: 80%; height: 100%" class="bg-yellow-200 rounded"></div>
+        </div>
+      </div>
+      <div>
+    </section>
+
+    <!-- Events section -->
+    <!-- Upcoming 5-6 events only -->
+    <section id="events" class="col-start-5 col-end-6 card row-start-2">
+      <h3 class="text-center mb-3">Events</h3>
+      <div class="mb-2">
+        <p class="font-semibold">5th Feb:</p>
+        <p>Programming in Java Exam</p>
+      </div>
+      <div class="mb-2">
+        <p class="font-semibold">7th Feb:</p>
+        <p>PLA Exam</p>
+      </div>
+      <div class="mb-2">
+        <p class="font-semibold">10th Feb:</p>
+        <p>Web Security Exam</p>
+      </div>
+      <div class="mb-2">
+        <p class="font-semibold">11th Feb:</p>
+        <p>Cloud Security Exam</p>
+      </div>
+      <div class="mb-2">
+        <p class="font-semibold">11th Feb:</p>
+        <p>Applied Linear Algebra Exam</p>
+      </div>
+      <div>
+        <p class="font-semibold">13th Feb:</p>
+        <p>Advanced Cyber Security Nascomm Exam</p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
