--- a/public/home.html
+++ b/public/home.html
@@ -54,8 +54,30 @@
       </div>
     </section>
 
-    <section id="make-post" class="col-start-2 col-end-4"></section>
-    <section id="user-posts" class="col-start-2 col-end-4"></section>
+    <!-- Section to make Posts -->
+    <section id="make-post" class="col-start-2 col-end-5 row-start-1 px-20">
+      <div class="card p-3">
+        <h3>Write Post</h3>
+        <form action="" method="post" class="divide-y border-2 rounded mt-3">
+          <div class="pl-2">
+            <input type="text" name="title" id="title" placeholder="Title" class="mb-2 pl-1 focus:border-green-400" style="width: 100%">
+            <textarea name="body" id="body" placeholder="Write a description..." style="width: 100%; min-height: 5rem; resize: none" class="pl-1"></textarea>
+            <input type="hidden" name="userName" value="Eshaan Bahuguna">
+          </div>
+          <div class="mt-3 p-2">
+            <button type="submit" class="primary-button">Post</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <!-- Section where Posts of other Users are displayed -->
+    <section id="posts" class="col-start-2 col-end-5 px-20 ">
+      <div class="card">
+        <h3>POSTS</h3>
+        
+      </div>
+    </section>
 
     <!-- Skills section -->
     <!-- TOP 5 Skills -->
